Calendar: fix alignment-baseline

--- a/teamapps-client/less/components/FullCalendarMonthGrid.less
+++ b/teamapps-client/less/components/FullCalendarMonthGrid.less
@@ -13,7 +13,6 @@
   .day-number {
     font-size: 5pt;
     text-anchor: middle;
-    alignment-baseline: hanging;
     font-weight: 500;
   }
 
